k8s/environments/development/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pal-tracker
spec:
  rules:
    - host: development.mike-g.pal4pe.com
      http:
        paths:
          - path: /
            backend:
              serviceName: pal-tracker
              servicePort: 8080
